# tokio-serial

./: .gitignore  .travis.yml  CHANGELOG.asciidoc  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  appveyor.yml
.github/: README.md
.github/workflows/: github-ci.yml
ci/: install.sh  script.sh
ci/docker/aarch64-unknown-linux-gnu/: Dockerfile
ci/docker/arm-unknown-linux-gnueabi/: Dockerfile
ci/docker/armv7-unknown-linux-gnueabihf/: Dockerfile
ci/docker/i686-unknown-linux-gnu/: Dockerfile
ci/docker/i686-unknown-linux-musl/: Dockerfile
ci/docker/mips-unknown-linux-gnu/: Dockerfile
ci/docker/mipsel-unknown-linux-gnu/: Dockerfile
ci/docker/powerpc-unknown-linux-gnu/: Dockerfile
ci/docker/x86_64-unknown-linux-gnu/: Dockerfile
ci/docker/x86_64-unknown-linux-musl/: Dockerfile
examples/: filter_play_sound.rs  pair.rs  serial_println.rs
src/: frame.rs  lib.rs  unix.rs  windows.rs
src/unix/: frame.rs  mod.rs
tests/: test_serialstream.rs
